[package]
build = "build.rs"
edition = "2021"
name = "api"
version = "0.7.5"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
async-graphql = { workspace = true, features = [
    "opentelemetry",
    "chrono",
    "unblock",
    "default",
    "uuid",
] }
async-graphql-poem = { workspace = true }
async-stream = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
cached = { workspace = true }
cfg-if = { workspace = true }
chrono = { workspace = true }
custom_error = { workspace = true }
derivative = { workspace = true }
diesel = { workspace = true }
diesel_migrations = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
iref = { workspace = true }
json-ld = { workspace = true }
jwtk = { workspace = true }
lazy_static = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
opa = { workspace = true }
opentelemetry = { workspace = true }
parking_lot = { workspace = true }
poem = { workspace = true }
reqwest = { workspace = true }
rust-embed = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
user-error = { workspace = true }
uuid = { workspace = true }
#Local deps
chronicle-persistence = { path = "../chronicle-persistence" }
chronicle-signing = { workspace = true }
chronicle-telemetry = { path = "../chronicle-telemetry" }
common = { path = "../common", features = [
    "json-ld",
    "diesel-bindings",
    "graphql-bindings",
    "std",
] }
protocol-substrate = { path = "../protocol-substrate" }
protocol-substrate-chronicle = { path = "../protocol-substrate-chronicle" }
protocol-substrate-opa = { path = "../protocol-substrate-opa" }
r2d2 = { version = "^0.8.1" }


[dev-dependencies]
assert_fs = { workspace = true }
insta = { workspace = true, features = ["json", "yaml"] }
tempfile = { workspace = true }

[build-dependencies]

[features]
devmode = []

strict = []
