[package]
edition = "2021"
name    = "async-sawtooth-sdk"
version = "0.1.0"

[lib]
name = "async_sawtooth_sdk"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace       = true
async-trait.workspace  = true
chrono                 = { workspace = true, features = ["serde"] }
derivative.workspace   = true
futures.workspace      = true
hex.workspace          = true
k256.workspace         = true
lazy_static.workspace  = true
openssl.workspace      = true
prost.workspace        = true
prost-types.workspace  = true
protobuf.workspace     = true
rand.workspace         = true
rand_core.workspace    = true
sawtooth-sdk.workspace = true
serde                  = { workspace = true, features = ["derive"] }
serde_json.workspace   = true
thiserror.workspace    = true
tokio.workspace        = true
tracing.workspace      = true
url.workspace          = true
uuid.workspace         = true
zmq.workspace          = true

[build-dependencies]
glob.workspace        = true
prost-build.workspace = true
