[package]
edition = "2021"
name    = "async-sawtooth-sdk"
version = "0.7.5"

[lib]
name = "async_sawtooth_sdk"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow           = { workspace = true }
async-trait      = { workspace = true }
derivative       = { workspace = true }
futures          = { workspace = true }
hex              = { workspace = true }
k256             = { workspace = true }
lazy_static      = { workspace = true }
lru              = { workspace = true }
pin-project-lite = { workspace = true }
pinvec           = { workspace = true }
pow_of_2         = { workspace = true }
prost            = { workspace = true }
prost-types      = { workspace = true }
rand             = { workspace = true }
rand_core        = { workspace = true }
serde            = { workspace = true, features = ["derive"] }
serde_json       = { workspace = true }
thiserror        = { workspace = true }
tmq              = { workspace = true }
tokio            = { workspace = true }
tokio-stream     = { workspace = true }
tracing          = { workspace = true }
url              = { workspace = true }
uuid             = { workspace = true, features = ["v4"] }
zmq              = { workspace = true }

[build-dependencies]
glob        = { workspace = true }
prost-build = { workspace = true }


[dev-dependencies]
chronicle-telemetry = { path = "../chronicle-telemetry" }
portpicker          = { workspace = true }
