[package]
edition = "2021"
name    = "chronicle-arrow"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrow-array = { workspace = true }
arrow-flight = { workspace = true }
arrow-ipc = { workspace = true }
arrow-schema = { workspace = true }
diesel = { workspace = true }
futures = { workspace = true }
lazy_static = { workspace = true }
prost-types = { version = "0.12.3", default-features = false }
r2d2 = { version = "^0.8.1" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { version = "^1", default-features = false, features = [
  "macros",
  "rt",
  "rt-multi-thread",
] }
tonic = { version = "^0.10.0", default-features = false, features = [
  "transport",
  "codegen",
  "prost",
] }
tracing = { workspace = true }
uuid = { workspace = true }


#local dependencies
api                   = { path = "../api" }
chronicle-persistence = { path = "../chronicle-persistence" }
common                = { path = "../common", features = ["std"] }


[dev-dependencies]
chronicle-telemetry           = { path = "../chronicle-telemetry" }
chronicle-test-infrastructure = { path = "../chronicle-test-infrastructure" }
insta                         = { workspace = true, features = ["toml"] }
portpicker                    = { workspace = true }
serde                         = { workspace = true, features = ["derive"] }
serde_arrow                   = { version = "*", features = ["arrow-50"] }
