[package]
edition = "2021"
name = "chronicle-arrow"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrow = { version = "50", features = ["json", "prettyprint", "chrono-tz"] }
arrow-array = { version = "50" }
arrow-buffer = { version = "50" }
arrow-data = { version = "50" }
arrow-flight = { version = "50" }
arrow-ipc = { version = "50" }
arrow-schema = { version = "50" }
chrono = { workspace = true }
diesel = { workspace = true }
futures = { workspace = true }
lazy_static = { workspace = true }
prost-types = { version = "0.12.3", default-features = false }
r2d2 = { version = "^0.8.1" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { version = "^1", default-features = false, features = [
    "macros",
    "rt",
    "rt-multi-thread",
] }
tonic = { version = "0.10.2", default-features = false, features = [
    "transport",
    "codegen",
    "prost",
] }
tracing = { workspace = true }
uuid = { workspace = true }


#local dependencies
api = { path = "../api" }
chronicle-persistence = { path = "../chronicle-persistence" }
common = { path = "../common", features = ["std"] }


[dev-dependencies]
arrow-json = { version = "50" }
chronicle-telemetry = { path = "../chronicle-telemetry" }
chronicle-test-infrastructure = { path = "../chronicle-test-infrastructure" }
insta = { workspace = true, features = ["toml"] }
portpicker = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_arrow = { version = "*", features = ["arrow-50"] }
