[package]
build   = "build.rs"
edition = "2021"
name    = "chronicle-example"
version = "0.6.2"

[[bin]]
name = "chronicle-example"
path = "src/test.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chronicle = { path = "../chronicle" }
telemetry = { path = "../telemetry" }
tracing = "0.1.34"
tracing-log = "0.1.3"
uuid = "1.0.0"

[build-dependencies]
chronicle = { path = "../chronicle" }

[features]
strict = []
# Use an in memory stub ledger
inmem = ["chronicle/inmem"]

[dev-dependencies]
insta    = { version = "1.14.0", features = ["redactions", "toml"] }
tempfile = "3.3.0"
