[package]
build   = "build.rs"
edition = "2021"
name    = "chronicle-example"
version = "0.7.5"

[[bin]]
name = "chronicle-example"
path = "src/test.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chronicle           = { path = "../chronicle" }
chronicle-telemetry = { path = "../chronicle-telemetry" }
tracing             = { workspace = true }
tracing-log         = { workspace = true }
uuid                = { workspace = true }

[build-dependencies]
chronicle = { path = "../chronicle" }

[features]
devmode = ["inmem"]
strict  = []
# Use an in-memory stub ledger
inmem = ["chronicle/inmem"]

[dev-dependencies]
async-sawtooth-sdk = { workspace = true }
chronicle-protocol = { path = "../chronicle-protocol" }
futures            = { workspace = true }
hex                = { workspace = true }
insta              = { workspace = true, features = ["json"] }
opa-tp-protocol    = { path = "../opa-tp-protocol" }
tempfile           = { workspace = true }
