[package]
build = "build.rs"
edition = "2021"
name = "chronicle-example"
version = "0.7.5"

[[bin]]
name = "chronicle-example"
path = "src/test.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chronicle = { path = "../chronicle" }
chronicle-signing = { path = "../chronicle-signing" }
chronicle-telemetry = { path = "../chronicle-telemetry" }
tracing = { workspace = true }
tracing-log = { workspace = true }
uuid = { workspace = true }

[build-dependencies]
chronicle = { path = "../chronicle" }

[features]
strict = []
# Use an in-memory stub ledger
devmode = ["chronicle/devmode"]

[dev-dependencies]
chronicle-test-infrastructure = { path = "../chronicle-test-infrastructure" }
common = { path = "../common", features = ["std"] }
embedded-substrate = { path = "../embedded-substrate" }
futures = { workspace = true }
hex = { workspace = true }
insta = { workspace = true, features = ["json"] }
protocol-substrate = { path = "../protocol-substrate" }
protocol-substrate-chronicle = { path = "../protocol-substrate-chronicle" }
protocol-substrate-opa = { path = "../protocol-substrate-opa" }
tempfile = { workspace = true }
tokio = { workspace = true }
