[package]
build   = "build.rs"
edition = "2021"
name    = "chronicle-domain"
version = "0.7.5"

[[bin]]
name = "chronicle"
path = "src/main.rs"
# same output filename as lib target
doc = false


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chronicle = { path = "../chronicle" }

[build-dependencies]
chronicle = { path = "../chronicle" }

[features]
strict = []
# Use an in memory stub ledger
inmem = ["chronicle/inmem"]

[dev-dependencies]
tempfile = { workspace = true }
