[package]
edition = "2021"
name = "chronicle-persistence"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = { workspace = true, features = [
    "chrono",
    "unblock",
    "default",
    "uuid",
] }
async-trait = { workspace = true }
chrono = { workspace = true }
derivative = { workspace = true }
diesel = { workspace = true }
diesel_migrations = { workspace = true }
hex = { workspace = true }
r2d2 = { version = "^0.8.1" }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

#local dependencies
common = { path = "../common", features = ["diesel-bindings", "std"] }
protocol-substrate-chronicle = { path = "../protocol-substrate-chronicle" }
