[package]
build   = "build.rs"
edition = "2021"
name    = "chronicle-protocol"
version = "0.7.5"

[lib]
name = "chronicle_protocol"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-sawtooth-sdk = { path = "../async-sawtooth-sdk" }
async-trait = { workspace = true }
backoff = { workspace = true, features = ["futures", "tokio"] }
bytes = { workspace = true }
common = { path = "../common" }
custom_error = { workspace = true }
derivative = { workspace = true }
futures = { workspace = true }
glob = { workspace = true }
hex = { workspace = true }
k256 = { workspace = true, features = [
  "default",
  "arithmetic",
  "ecdsa",
  "pkcs8",
  "sha256",
  "std",
  "pem",
] }
lazy_static = { workspace = true }
opa-tp-protocol = { path = "../opa-tp-protocol" }
openssl = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
rand = { workspace = true, features = ["getrandom"] }
rand_core = { workspace = true }
sawtooth-sdk = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["time", "macros", "rt-multi-thread"] }
tracing = { workspace = true }
url = { workspace = true }
uuid = { workspace = true, features = ["serde", "v4"] }
zmq = { workspace = true }

[build-dependencies]
glob        = { workspace = true }
prost-build = { workspace = true }

[dev-dependencies]
protobuf = { workspace = true }
temp-dir = { workspace = true }
tempfile = { workspace = true }

[features]
default          = ["vendored-zmq", "vendored-openssl"]
vendored-openssl = ['openssl/vendored']
vendored-zmq     = ['zmq/vendored']
