[package]
build   = "build.rs"
edition = "2021"
name    = "chronicle-synth"
version = "0.7.5"

[lib]
name = "chronicle_synth"
path = "src/lib.rs"

[[bin]]
name = "chronicle-synth"
path = "src/generate.rs"

[dependencies]
clap       = { workspace = true }
maplit     = { workspace = true }
owo-colors = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror  = { workspace = true }

#local dependencies

chronicle = { path = "../chronicle" }
common    = { path = "../common", features = ["std"] }

[dev-dependencies]
assert_fs = { workspace = true }
insta     = { workspace = true, features = ["json"] }
