[package]
build   = "build.rs"
edition = "2021"
name    = "chronicle-synth"
version = "0.7.6"

[lib]
name = "chronicle_synth"
path = "src/lib.rs"

[[bin]]
name = "chronicle-synth"
path = "src/generate.rs"

[dependencies]
chronicle  = { path = "../chronicle" }
maplit     = { workspace = true }
owo-colors = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
structopt  = { workspace = true }
thiserror  = { workspace = true }

[dev-dependencies]
assert_fs = { workspace = true }
insta     = { workspace = true, features = ["json"] }
