[package]
edition = "2021"
name = "chronicle-telemetry"
version = "0.7.5"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = { workspace = true }
console-subscriber = { workspace = true }
opentelemetry-otlp = { version = "^0.15" }
tracing = { workspace = true }
tracing-flame = { version = "^0.2" }
tracing-log = { workspace = true }
tracing-opentelemetry = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true, features = ["serde"] }

[features]
tokio-tracing = []
