[package]
edition = "2021"
name = "chronicle-telemetry"
version = "0.7.5"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = { workspace = true }
console-subscriber = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "^0.3.15", features = [
  "std",
  "registry",
  "env-filter",
  "json"
] }
log = "^0.4.21"
opentelemetry-appender-log = { git="https://github.com/open-telemetry/opentelemetry-rust",version="0.4", default-features = false}
opentelemetry-appender-tracing = { git="https://github.com/open-telemetry/opentelemetry-rust",version="0.4", default-features = false}
opentelemetry = {git="https://github.com/open-telemetry/opentelemetry-rust", version = "0.23", features = ["metrics", "logs"] }
opentelemetry_sdk = {git="https://github.com/open-telemetry/opentelemetry-rust", version = "0.23", features = ["rt-tokio", "logs"] }
opentelemetry-otlp = {git="https://github.com/open-telemetry/opentelemetry-rust", version = "0.16.0", features = ["tonic", "metrics", "logs","grpc-tonic","tls-roots"] }
opentelemetry-semantic-conventions = {git="https://github.com/open-telemetry/opentelemetry-rust", version = "0.15.0" }
opentelemetry-stdout = {git="https://github.com/open-telemetry/opentelemetry-rust", version = "0.4", features = ["logs"]}

url = { workspace = true, features = ["serde"] }

[features]
tokio-tracing = []
