[package]
edition = "2021"
name = "chronicle-test-infrastructure"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
api = { path = "../api" }
async-trait = { workspace = true }
chronicle = { path = "../chronicle" }
chronicle-signing = { path = "../chronicle-signing" }
chronicle-telemetry = { path = "../chronicle-telemetry" }
chrono = { workspace = true }
common = { path = "../common", features = [
    "parity-encoding",
    "json-ld",
    "std",
] }
diesel = { workspace = true }
frame-support = { git = 'https://github.com/paritytech/polkadot-sdk.git', tag = 'polkadot-v1.9.0', features = ["std"] }
frame-system = { git = 'https://github.com/paritytech/polkadot-sdk.git', tag = 'polkadot-v1.9.0', features = ["std"] }
sp-core = { git = 'https://github.com/paritytech/polkadot-sdk.git', tag = 'polkadot-v1.9.0' }
sp-io = { git = 'https://github.com/paritytech/polkadot-sdk.git', tag = 'polkadot-v1.9.0' }
sp-runtime = { git = 'https://github.com/paritytech/polkadot-sdk.git', tag = 'polkadot-v1.9.0' }

futures = { workspace = true }
insta = { workspace = true, features = ["json", "yaml"] }
lazy_static = { workspace = true }
pallet-chronicle = { path = "../pallet-chronicle" }
parity-scale-codec = { version = "3.6.1", default-features = false, features = [
    "derive",
] }
portpicker = { workspace = true }
protocol-abstract = { path = "../protocol-abstract" }
protocol-substrate = { path = "../protocol-substrate" }
protocol-substrate-chronicle = { path = "../protocol-substrate-chronicle" }
r2d2 = { version = "^0.8.1" }
scale-info = { version = "2.10.0", default-features = false, features = [
    "derive",
] }
serde_json = { workspace = true }
subxt = { version = "0.34", features = ["substrate-compat"] }
tempfile = { workspace = true }
testcontainers = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
assert_fs = { workspace = true }
