[package]
build   = "build.rs"
edition = "2021"
name    = "common"
version = "0.7.5"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
async-graphql = { workspace = true, features = [
  "opentelemetry",
  "chrono",
  "unblock",
  "default",
  "uuid",
] }
async-trait = { workspace = true }
chronicle-signing = { workspace = true }
chrono = { workspace = true }
custom_error = { workspace = true }
derivative = { workspace = true }
diesel = { workspace = true }
futures = { workspace = true }
glob = { workspace = true }
hashbrown = { workspace = true }
hex = { workspace = true }
iref = { workspace = true }
iref-enum = { workspace = true }
json-ld = { workspace = true }
json-syntax = { workspace = true }
k256 = { workspace = true }
lazy_static = { workspace = true }
locspan = { workspace = true }
mime = { workspace = true }
opa = { workspace = true }
opa-tp-protocol = { path = "../opa-tp-protocol" }
openssl = { workspace = true }
percent-encoding = { workspace = true }
pkcs8 = { workspace = true }
prost = "0.10.0"
r2d2 = { workspace = true }
rand = { workspace = true }
rand_core = { workspace = true }
rdf-types = { workspace = true }
reqwest = { workspace = true }
rust-embed = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
serde_json = { workspace = true }
static-iref = { workspace = true }
testcontainers = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
zmq = { workspace = true }

[build-dependencies]
glob        = { workspace = true }
lazy_static = { workspace = true }
serde_json  = { workspace = true }

[dev-dependencies]
criterion    = { workspace = true }
insta        = { workspace = true, features = ["json"] }
mockito      = { workspace = true }
proptest     = { workspace = true }
tempfile     = { workspace = true }

[[bench]]
harness = false
name    = "opa_executor"

[features]
strict = []
