[package]
name = "frame-chronicle"
edition = "2021"
version = "0.7.5"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

common = {path = "../common"}
parity-scale-codec = {workspace = true}
sp-std = {workspace = true}
scale-info = {workspace = true}
frame-support = {workspace = true}
frame-system = {workspace = true}
frame-benchmarking  = {workspace = true}
tracing = {workspace=true}

[dev-dependencies]
sp-runtime = {workspace = true}
sp-io = {workspace = true}
sp-core = {workspace = true}

[features]
default = ["std"]
std = [
	"parity-scale-codec/std",
	"frame-benchmarking/std",
	"frame-support/std",
	"frame-system/std",
	"scale-info/std",
]
runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]
try-runtime = ["frame-support/try-runtime"]
